; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/qcom/extr_apr.c_apr_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/qcom/extr_apr.c_apr_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpmsg_device = type { i32 }
%struct.apr = type { i32 }

@apr_remove_device = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rpmsg_device*)* @apr_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @apr_remove(%struct.rpmsg_device* %0) #0 {
  %2 = alloca %struct.rpmsg_device*, align 8
  %3 = alloca %struct.apr*, align 8
  store %struct.rpmsg_device* %0, %struct.rpmsg_device** %2, align 8
  %4 = load %struct.rpmsg_device*, %struct.rpmsg_device** %2, align 8
  %5 = getelementptr inbounds %struct.rpmsg_device, %struct.rpmsg_device* %4, i32 0, i32 0
  %6 = call %struct.apr* @dev_get_drvdata(i32* %5)
  store %struct.apr* %6, %struct.apr** %3, align 8
  %7 = load %struct.rpmsg_device*, %struct.rpmsg_device** %2, align 8
  %8 = getelementptr inbounds %struct.rpmsg_device, %struct.rpmsg_device* %7, i32 0, i32 0
  %9 = load i32, i32* @apr_remove_device, align 4
  %10 = call i32 @device_for_each_child(i32* %8, i32* null, i32 %9)
  %11 = load %struct.apr*, %struct.apr** %3, align 8
  %12 = getelementptr inbounds %struct.apr, %struct.apr* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @flush_workqueue(i32 %13)
  %15 = load %struct.apr*, %struct.apr** %3, align 8
  %16 = getelementptr inbounds %struct.apr, %struct.apr* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @destroy_workqueue(i32 %17)
  ret void
}

declare dso_local %struct.apr* @dev_get_drvdata(i32*) #1

declare dso_local i32 @device_for_each_child(i32*, i32*, i32) #1

declare dso_local i32 @flush_workqueue(i32) #1

declare dso_local i32 @destroy_workqueue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
